<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.jmuthu.poovali.activity.MainActivity">
    <item
        android:id="@+id/add_plant"
        android:icon="@drawable/hand_holding_up_a_sprout"
        app:showAsAction="ifRoom"
        android:title="@string/add_plant" />
    <item
        android:id="@+id/add_batch"
        android:icon="@drawable/seeds_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/add_batch" />
    <item
        android:id="@+id/add_event"
        android:icon="@drawable/plant_a_tree_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/add_event" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/edit" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/delete" />
</menu>