<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/content_add_plant_batch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.github.jmuthu.poovali.activity.AddPlantBatchActivity"
        tools:showIn="@layout/activity_add_plant_batch">

        <TextView
            android:id="@+id/plant_label"
            style="@style/FormLabel"
            android:text="@string/plant_label" />

        <Spinner
            android:id="@+id/plant_type_spinner"
            style="@style/ThemeSpinner"
            android:layout_marginStart="@dimen/list_icon_padding_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plant_label" />

        <TextView
            android:id="@+id/date_label"
            style="@style/FormLabel"
            android:layout_below="@+id/plant_type_spinner"
            android:text="@string/created_on" />

        <TextView
            android:id="@+id/date"
            style="@android:style/TextAppearance.Material.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_label"
            android:paddingStart="@dimen/list_icon_padding_start"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="showDatePickerDialog" />

        <View
            android:id="@+id/date_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/list_icon_padding_start"
            android:layout_alignEnd="@+id/date"
            android:layout_alignStart="@+id/date"
            android:layout_below="@id/date"
            android:background="#9E9E9E" />

        <TextView
            android:id="@+id/time"
            style="@android:style/TextAppearance.Material.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_label"
            android:layout_marginStart="@dimen/list_icon_padding_start"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/date"
            android:gravity="center"
            android:onClick="showTimePickerDialog" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_alignEnd="@+id/time"
            android:layout_alignStart="@+id/time"
            android:layout_below="@+id/time"
            android:background="#9E9E9E" />

        <TextView
            android:id="@+id/description_label"
            style="@style/FormLabel"
            android:layout_below="@+id/time"
            android:text="@string/event_description" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_label"
            android:layout_marginStart="@dimen/list_icon_padding_start"
            android:layout_marginEnd="@dimen/list_text_padding_end"
            android:backgroundTint="#9E9E9E"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"
            android:minLines="1"
            android:labelFor="@id/description"
            android:textCursorDrawable="@drawable/cursor" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
